--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -1,10 +1,15 @@
-div {
-  background: beige;
-  margin: 8px;
+.container {
+  max-width: 1150px;
+  margin: 0 auto;
 }
+
 header {
   background: azure;
   padding: 48px;
+}
+
+article {
+  border: 3px solid crimson;
 }
 
 #alaune {
@@ -13,18 +18,43 @@ header {
   padding: 40px;
 }
 
-#categories {
+#categories .container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 20px;
+}
+#categories .cat-sm {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
 }
 
 #wanderlust {
   background: LavenderBlush;
+}
+#wanderlust .container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-column-gap: 20px;
 }
-
 #wanderlust .intro {
   grid-column: 1 / 3;
 }
+
+#second-level .container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+#second-level aside {
+  grid-column: 3 / 4;
+}
+
+#all-articles {
+  grid-column: 1 / 3;
+}
+
+footer {
+  background: SlateGray;
+  color: white;
+}
+
+/*# sourceMappingURL=main.css.map */
