--- a/theme/css/main.scss
+++ b/theme/css/main.scss
@@ -55,6 +55,23 @@ article {
   .intro {
     grid-column: 1 / 3;
   }
+  .wanderlust {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+
+    img, .content {
+      grid-column: 1 / 2;
+      grid-row: 1 / 2;
+    }
+    img {
+      z-index: 1;
+    }
+    .content {
+      z-index: 2;
+      border: 1px solid blue;
+    }
+  }
 }
 
 #second-level {
