utilisation des rem

--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -1,3 +1,41 @@
+html {
+  font-size: 50%;
+}
+
+body {
+  font-size: 2rem;
+  line-height: 3rem;
+}
+
+img {
+  width: 100%;
+}
+
+h1 {
+  font-size: 5rem;
+  line-height: 6rem;
+}
+
+h2 {
+  font-size: 4rem;
+  line-height: 5rem;
+}
+
+h3 {
+  font-size: 3rem;
+  line-height: 4rem;
+}
+
+p {
+  font-size: 2rem;
+  line-height: 3rem;
+}
+
+p.date {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .container {
   max-width: 1150px;
   margin: 0 auto;
