--- a/theme/css/main.scss
+++ b/theme/css/main.scss
@@ -1,11 +1,13 @@
-@import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i|Raleway:400,400i,700,700i,900,900i');
+ @import url('https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i|Playfair+Display:400,700,900&subset=latin-ext');
 
-$prune: #3c0d21;
-$brique: #ca534d;
-$beige: #fceceb;
+$hotelblue: #09B2BD;
+$orange: #FF5C00;
+$beige: #F6F1F1;
 $blanc: #fff;
 $noir: #000;
 $anthracite: #333;
+$grey: #5E5E5E;
+$greyblue: #30393D;
 
 
 html {
@@ -15,9 +17,9 @@ html {
 body {
   font-size: 2rem;
   line-height: 3rem;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Lato', sans-serif;
   background-color: $beige;
-  color: $prune;
+  color: $grey;
 }
 
 img {
@@ -28,16 +30,35 @@ h1 { font-size: 5rem; line-height: 6rem;}
 h2 { font-size: 4rem; line-height: 5rem;}
 h3 { font-size: 3rem; line-height: 4rem;}
 p { font-size: 2rem; line-height: 3rem;}
-p.date { font-size: 1.5rem; line-height: 2rem;}
+p.date { font-size: 1.5rem; line-height: 2rem; text-transform: uppercase; letter-spacing: .1rem;}
 .container {
   max-width: 1150px;
   margin: 0 auto;
 }
 
 header {
-  background: $prune;
-  color: $beige;
+  background: $beige;
+  color: $grey;
   padding: 48px;
+    h1 { color: $hotelblue;}
+}
+
+nav {
+  display: grid;
+  grid-template-rows: repeat(8, 1fr);
+  grid-column-gap: 20px;
+  position: fixed;
+  top: 0;
+  background: $beige;
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.1);
+  z-index: 999;
+  width: 100%;
+  li {
+    display: inline-block;
+    grid: 1/8;
+    font-size: 1.5rem; line-height: 2rem; text-transform: uppercase; letter-spacing: .1rem;
+    margin: 2rem;
+  }
 }
 
 article {
@@ -45,8 +66,6 @@ article {
 }
 
 #alaune {
-  background: $prune;
-  color: $beige;
   margin: 8px;
   padding: 40px;
 
@@ -54,6 +73,7 @@ article {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-column-gap: 20px;
+    h1 { color: $anthracite;}
   }
 
   img {
@@ -66,18 +86,18 @@ article {
 
   .container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 2fr);
     grid-column-gap: 20px;
     .cat {
 
       .intro {
         background: $beige;
-        color: $prune;
+        color: $hotelblue;
         h1,h2,h3,h4,h5,h6 {
-          color: $brique;
+          color: $hotelblue;
         }
       }
-      background: $brique;
+      background: $hotelblue;
       color: $beige;
       h1,h2,h3,h4,h5,h6 {
         color: $beige;
@@ -85,16 +105,11 @@ article {
     }
   }
 
-  .cat-sm {
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-  }
-
 
 }
 
 #wanderlust {
-  background: $prune;
+  background: $greyblue;
   color: $beige;
 
   .container {
@@ -148,7 +163,8 @@ footer {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Playfair Display', serif;
-  font-style: italic;
   font-weight: 900;
-  color: $brique;
+  color: $hotelblue;
 }
+
+a { color: $orange; text-decoration: none;}
