--- a/theme/css/main.scss
+++ b/theme/css/main.scss
@@ -29,8 +29,12 @@ img {
 h1 { font-size: 5rem; line-height: 6rem;}
 h2 { font-size: 4rem; line-height: 5rem;}
 h3 { font-size: 3rem; line-height: 4rem;}
-p { font-size: 2rem; line-height: 3rem;}
-p.date { font-size: 1.5rem; line-height: 2rem; text-transform: uppercase; letter-spacing: .1rem;}
+p {
+  font-size: 2rem;
+  line-height: 3rem;
+  .surtitre { margin-bottom: 2rem; }
+}
+p.date, p.surtitre { font-size: 1.5rem; line-height: 2rem; text-transform: uppercase; letter-spacing: .1rem;}
 .container {
   max-width: 1150px;
   margin: 0 auto;
@@ -67,22 +71,32 @@ nav {
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.1);
   z-index: 999;
   ul {
-    // display: grid;
-    // grid-template-columns: repeat(6, 1fr);
-    // grid-column-gap: 20px;
-
-    .selected {
-      border-bottom: solid 3px $orange;
-    }
-
+    display: inline-block;
+    margin-bottom: 0;
+    padding:0;
     li {
       display: inline-block;
       font-size: 1.5rem; line-height: 2rem; text-transform: uppercase; letter-spacing: .1rem;
-      padding: 2rem;
+      padding: 2rem 0;
+      margin: 0 2rem;
       text-align: center;
     }
+  }
+  .primaryNav {
+    color: $anthracite;
+    float: left;
+    .selected { border-bottom: solid 3px $orange; }
     li:hover { color: $orange; border-bottom: solid 3px $orange;}
   }
+  .secondaryNav {
+    color: rgba(51, 51, 51, 0.5);
+    float: right;
+    .selected { border-bottom: solid 3px $anthracite; }
+    li:hover { color: $anthracite; border-bottom: solid 3px $anthracite;}
+  }
+
+
+
 }
 
 
@@ -91,8 +105,9 @@ article {
 }
 
 #alaune {
-  margin: 8px;
-  padding: 40px;
+  padding-top: 5rem;
+  z-index: 50;
+  position: relative;
 
   .big {
     display: grid;
@@ -136,7 +151,12 @@ article {
 #wanderlust {
   background: $greyblue;
   color: $beige;
+  height: 78rem;
+  clip-path: polygon(0 0, 100% 9rem, 100% 100%, 0 100%);
+  margin-top: -7rem;
+  padding-top: 12rem;
 
+  h2 { color: $orange; font-size: 7rem; line-height: 8rem;}
   .container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
