--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -34,8 +34,14 @@ p {
   font-size: 2rem;
   line-height: 3rem;
 }
-p .surtitre {
+
+p.surtitre {
   margin-bottom: 2rem;
+}
+
+p.chapo {
+  line-height: 4rem;
+  margin: 1rem 0;
 }
 
 p.date, p.surtitre {
@@ -132,15 +138,22 @@ nav .secondaryNav li:hover {
 }
 #alaune .big {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 20px;
+  grid-template-columns: repeat(12, 1fr);
+  grid-column-gap: 3rem;
+}
+#alaune .big .date, #alaune .big .chapo {
+  grid-column: 8 / 13;
 }
 #alaune .big h1 {
+  grid-column: 7 / 13;
   color: #333;
-  margin-left: -12rem;
 }
-#alaune img {
-  grid-column: 1 / 3;
+#alaune .big button {
+  grid-column: 8 / 10;
+}
+#alaune .big img {
+  grid-column: 1 / 8;
+  grid-row: 1 / 5;
 }
 
 #categories {
@@ -199,10 +212,49 @@ nav .secondaryNav li:hover {
   z-index: 2;
 }
 
+#second-level {
+  margin-top: 10rem;
+}
+
 #all-articles {
+  margin-top: 3rem;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 3rem;
+}
+#all-articles .article {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-gap: 1rem;
+  grid-template-rows: 8rem;
+  -webkit-box-align: bottom;
+      -ms-flex-align: bottom;
+          align-items: bottom;
+}
+#all-articles .article img {
+  grid-column: 3/6;
+  grid-row: 1/5;
+  height: 32rem;
+}
+#all-articles .article h1 {
+  grid-column: 1/4;
+  grid-row: 1/4;
+  color: #333;
+  margin-bottom: 0 !important;
+}
+#all-articles .article .date {
+  grid-column: 1/3;
+  grid-row: 4/5;
+  -ms-flex-item-align: end;
+      align-self: end;
+}
+#all-articles .article .chapo {
+  grid-column: 1/6;
+  grid-row: 5/7;
+}
+#all-articles .article button {
+  grid-column: 4/6;
+  grid-row: 7/8;
 }
 
 footer {
