--- a/theme/css/main.scss
+++ b/theme/css/main.scss
@@ -32,8 +32,9 @@ h3 { font-size: 3rem; line-height: 4rem;}
 p {
   font-size: 2rem;
   line-height: 3rem;
-  .surtitre { margin-bottom: 2rem; }
 }
+p.surtitre { margin-bottom: 2rem; }
+p.chapo {line-height: 4rem; margin: 1rem 0; }
 p.date, p.surtitre { font-size: 1.5rem; line-height: 2rem; text-transform: uppercase; letter-spacing: .1rem;}
 .container {
   max-width: 141rem;
@@ -94,9 +95,6 @@ nav {
     .selected { border-bottom: solid 3px $anthracite; }
     li:hover { color: $anthracite; border-bottom: solid 3px $anthracite;}
   }
-
-
-
 }
 
 
@@ -111,14 +109,25 @@ article {
 
   .big {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-column-gap: 20px;
-    h1 { color: $anthracite; margin-left: -12rem;}
+    grid-template-columns: repeat(12, 1fr);
+    grid-column-gap: 3rem;
+    .date, .chapo {
+      grid-column: 8 / 13;
+    }
+    h1 {
+      grid-column: 7 / 13;
+      color: $anthracite;
+    }
+    button {
+      grid-column: 8 / 10;
+    }
+    img {
+      grid-column: 1 / 8;
+      grid-row: 1 / 5;
+    }
+
   }
 
-  img {
-    grid-column: 1 / 3;
-  }
 
 }
 
@@ -187,6 +196,8 @@ article {
 
 #second-level {
 
+  margin-top: 10rem;
+
   .container {
 
   }
@@ -194,9 +205,50 @@ article {
 }
 
 #all-articles {
+  margin-top: 3rem;
+
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 3rem;
+
+  .article {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-gap: 1rem;
+    grid-template-rows: 8rem;
+    align-items: bottom;
+
+    img {
+      grid-column: 3/6;
+      grid-row: 1/5;
+      height: 32rem;
+    }
+
+    h1 {
+      grid-column: 1/4;
+      grid-row: 1/4;
+      // align-self: bottom;
+      // justify-self: bottom;
+
+      color: $anthracite;
+      margin-bottom: 0!important;
+    }
+
+    .date {
+      grid-column: 1/3;
+      grid-row: 4/5;
+      align-self: end;
+    }
+
+    .chapo {
+      grid-column: 1/6;
+      grid-row: 5/7;
+    }
+    button {
+      grid-column: 4/6;
+      grid-row: 7/8;
+    }
+  }
 }
 
 footer {
