--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -65,17 +65,14 @@ button {
 header {
   display: grid;
   top: 7rem;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#F6F1F1), to(rgba(246, 241, 241, 0.1))), url("../waves.jpg");
   background-image: linear-gradient(to bottom, #F6F1F1, rgba(246, 241, 241, 0.1)), url("../waves.jpg");
   background-size: cover;
   color: #5E5E5E;
   height: 59rem;
-  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 51rem);
-          clip-path: polygon(0 0, 100% 0, 100% 100%, 0 51rem);
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 51rem);
 }
 header .container {
-  -ms-flex-item-align: center;
-      align-self: center;
+  align-self: center;
   justify-self: center;
   vertical-align: middle;
 }
@@ -89,8 +86,7 @@ nav {
   top: 0;
   left: 0;
   background: #fff;
-  -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.1);
   z-index: 999;
 }
 nav ul {
@@ -141,11 +137,16 @@ nav .secondaryNav li:hover {
   grid-template-columns: repeat(12, 1fr);
   grid-column-gap: 3rem;
 }
-#alaune .big .date, #alaune .big .chapo {
+#alaune .big .date {
+  grid-column: 8 / 13;
+  grid-row: 1 / 2;
+}
+#alaune .big .chapo {
   grid-column: 8 / 13;
 }
 #alaune .big h1 {
   grid-column: 7 / 13;
+  grid-row: 2 / 3;
   color: #333;
 }
 #alaune .big button {
@@ -178,8 +179,7 @@ nav .secondaryNav li:hover {
   background: #30393D;
   color: #F6F1F1;
   height: 78rem;
-  -webkit-clip-path: polygon(0 0, 100% 9rem, 100% 100%, 0 100%);
-          clip-path: polygon(0 0, 100% 9rem, 100% 100%, 0 100%);
+  clip-path: polygon(0 0, 100% 9rem, 100% 100%, 0 100%);
   margin-top: -7rem;
   padding-top: 12rem;
 }
@@ -227,9 +227,7 @@ nav .secondaryNav li:hover {
   grid-template-columns: repeat(6, 1fr);
   grid-gap: 1rem;
   grid-template-rows: 8rem;
-  -webkit-box-align: bottom;
-      -ms-flex-align: bottom;
-          align-items: bottom;
+  align-items: bottom;
 }
 #all-articles .article img {
   grid-column: 3/6;
@@ -245,8 +243,7 @@ nav .secondaryNav li:hover {
 #all-articles .article .date {
   grid-column: 1/3;
   grid-row: 4/5;
-  -ms-flex-item-align: end;
-      align-self: end;
+  align-self: end;
 }
 #all-articles .article .chapo {
   grid-column: 1/6;
