--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -65,14 +65,17 @@ button {
 header {
   display: grid;
   top: 7rem;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#F6F1F1), to(rgba(246, 241, 241, 0.1))), url("../waves.jpg");
   background-image: linear-gradient(to bottom, #F6F1F1, rgba(246, 241, 241, 0.1)), url("../waves.jpg");
   background-size: cover;
   color: #5E5E5E;
   height: 59rem;
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 51rem);
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 51rem);
+          clip-path: polygon(0 0, 100% 0, 100% 100%, 0 51rem);
 }
 header .container {
-  align-self: center;
+  -ms-flex-item-align: center;
+      align-self: center;
   justify-self: center;
   vertical-align: middle;
 }
@@ -86,7 +89,8 @@ nav {
   top: 0;
   left: 0;
   background: #fff;
-  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.1);
   z-index: 999;
 }
 nav ul {
@@ -179,7 +183,8 @@ nav .secondaryNav li:hover {
   background: #30393D;
   color: #F6F1F1;
   height: 78rem;
-  clip-path: polygon(0 0, 100% 9rem, 100% 100%, 0 100%);
+  -webkit-clip-path: polygon(0 0, 100% 9rem, 100% 100%, 0 100%);
+          clip-path: polygon(0 0, 100% 9rem, 100% 100%, 0 100%);
   margin-top: -7rem;
   padding-top: 12rem;
 }
@@ -226,32 +231,30 @@ nav .secondaryNav li:hover {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   grid-gap: 1rem;
-  grid-template-rows: 8rem;
-  align-items: bottom;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
 }
 #all-articles .article img {
   grid-column: 3/6;
-  grid-row: 1/5;
+  grid-row: 1 / 2;
   height: 32rem;
 }
-#all-articles .article h1 {
+#all-articles .article .align-bottom {
   grid-column: 1/4;
-  grid-row: 1/4;
+  grid-row: 1 / 2;
+  -ms-flex-item-align: end;
+      align-self: end;
+}
+#all-articles .article .align-bottom h1 {
   color: #333;
   margin-bottom: 0 !important;
 }
-#all-articles .article .date {
-  grid-column: 1/3;
-  grid-row: 4/5;
-  align-self: end;
-}
 #all-articles .article .chapo {
   grid-column: 1/6;
-  grid-row: 5/7;
 }
 #all-articles .article button {
   grid-column: 4/6;
-  grid-row: 7/8;
 }
 
 footer {
@@ -262,7 +265,6 @@ footer {
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Playfair Display', serif;
   font-weight: 900;
-  color: #09B2BD;
 }
 
 a {
