--- a/theme/css/main.scss
+++ b/theme/css/main.scss
@@ -220,38 +220,34 @@ article {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-gap: 1rem;
-    grid-template-rows: 8rem;
-    align-items: bottom;
+    // grid-template-rows: 8rem;
+    align-items: end;
 
     img {
       grid-column: 3/6;
-      grid-row: 1/5;
+      grid-row: 1 / 2;
       height: 32rem;
     }
 
-    h1 {
+    .align-bottom {
       grid-column: 1/4;
-      grid-row: 1/4;
+      grid-row: 1 / 2;
+      align-self: end;
       // align-self: bottom;
       // justify-self: bottom;
-
-      color: $anthracite;
-      margin-bottom: 0!important;
-    }
-
-    .date {
-      grid-column: 1/3;
-      grid-row: 4/5;
-      align-self: end;
+      h1 {
+        color: $anthracite;
+        margin-bottom: 0!important;
+      }
     }
 
     .chapo {
       grid-column: 1/6;
-      grid-row: 5/7;
+      // grid-row: 5/7;
     }
     button {
       grid-column: 4/6;
-      grid-row: 7/8;
+      // grid-row: 7/8;
     }
   }
 }
@@ -264,7 +260,6 @@ footer {
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Playfair Display', serif;
   font-weight: 900;
-  color: $hotelblue;
 }
 
 a { color: $orange; text-decoration: none;}
