--- a/theme/css/main.css
+++ b/theme/css/main.css
@@ -179,42 +179,47 @@ nav .secondaryNav li:hover {
   color: #333;
 }
 
-#wanderlust {
+#travel {
   background: #30393D;
   color: #F6F1F1;
-  height: 78rem;
   -webkit-clip-path: polygon(0 0, 100% 9rem, 100% 100%, 0 100%);
           clip-path: polygon(0 0, 100% 9rem, 100% 100%, 0 100%);
   margin-top: -7rem;
   padding-top: 12rem;
 }
-#wanderlust h2 {
+#travel h2 {
   color: #FF5C00;
   font-size: 7rem;
   line-height: 8rem;
 }
-#wanderlust .container {
+#travel .container {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(12, 1fr);
   grid-column-gap: 3rem;
 }
-#wanderlust .intro {
-  grid-column: 1 / 3;
+#travel .container h2 {
+  grid-column: 1 / 7;
 }
-#wanderlust .wanderlust {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
+#travel .container .desc {
+  grid-column: 1 / 5;
+  color: #F6F1F1;
+  opacity: 0.5;
 }
-#wanderlust .wanderlust img, #wanderlust .wanderlust .content {
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
+#travel .container .map {
+  grid-column: 1 / 7;
 }
-#wanderlust .wanderlust img {
-  z-index: 1;
+#travel .container .map img {
+  margin-left: -12rem;
+  opacity: 0.2;
 }
-#wanderlust .wanderlust .content {
-  z-index: 2;
+#travel .container .video {
+  grid-column: 7 / 13;
+  grid-row: 2 / 4;
+}
+#travel .container .video img {
+  border-radius: 0.5rem;
+  -webkit-box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.25);
 }
 
 #second-level {
@@ -255,6 +260,19 @@ nav .secondaryNav li:hover {
 }
 #all-articles .article button {
   grid-column: 4/6;
+}
+
+#newsletter {
+  margin: 20rem;
+}
+
+#instagram {
+  margin: 20rem;
+}
+#instagram .container {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-gap: 3rem;
 }
 
 footer {
