--- a/theme/css/main.scss
+++ b/theme/css/main.scss
@@ -162,10 +162,10 @@ article {
 
 }
 
-#wanderlust {
+#travel {
   background: $greyblue;
   color: $beige;
-  height: 78rem;
+  // height: 78rem;
   clip-path: polygon(0 0, 100% 9rem, 100% 100%, 0 100%);
   margin-top: -7rem;
   padding-top: 12rem;
@@ -173,31 +173,38 @@ article {
   h2 { color: $orange; font-size: 7rem; line-height: 8rem;}
   .container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(12, 1fr);
     grid-column-gap: 3rem;
+
+    h2 {
+      grid-column: 1 / 7;
+    }
+    .desc {
+      grid-column: 1 / 5;
+
+      color: $beige;
+      opacity: 0.5;
+    }
+    .map {
+      grid-column: 1 / 7;
+
+      img {
+        margin-left: -12rem;
+        opacity: 0.2;
+      }
+    }
+     .video {
+      grid-column: 7 / 13;
+      grid-row: 2 / 4;
+
+      img {
+        border-radius: 0.5rem;
+        box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.25);
+      }
+    }
+    }
   }
 
-  .intro {
-    grid-column: 1 / 3;
-  }
-  .wanderlust {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-
-    img, .content {
-      grid-column: 1 / 2;
-      grid-row: 1 / 2;
-    }
-    img {
-      z-index: 1;
-    }
-    .content {
-      z-index: 2;
-      // border: 1px solid blue;
-    }
-  }
-}
 
 #second-level {
 
@@ -252,6 +259,21 @@ article {
   }
 }
 
+#newsletter {
+  margin: 20rem;
+}
+
+#instagram {
+  margin: 20rem;
+  .container {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-gap: 3rem;
+
+    img {
+          }
+  }
+}
 footer {
   background: SlateGray;
   color: white;
