--- a/theme/css/main.scss
+++ b/theme/css/main.scss
@@ -1,4 +1,37 @@
- @import url('https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i|Playfair+Display:400,700,900&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i|Playfair+Display:400,700,900&subset=latin-ext');
+
+// @font-face {
+//   font-family: "Lato";
+//   src: url("../f/Lato/Lato-Regular.ttf") format("truetype");
+//   font-weight: normal;
+//   font-style: normal;
+// }
+// @font-face {
+//   font-family: "Lato";
+//   src: url("../f/Lato/Lato-Italic.ttf") format("truetype");
+//   font-weight: normal;
+//   font-style: italic;
+// }
+// @font-face {
+//   font-family: "Lato";
+//   src: url("../f/Lato/Lato-Bold.ttf") format("truetype");
+//   font-weight: bold;
+//   font-style: normal;
+// }
+// @font-face {
+//   font-family: "Lato";
+//   src: url("../f/Lato/Lato-BoldItalic.ttf") format("truetype");
+//   font-weight: bold;
+//   font-style: italic;
+// }
+//
+// @font-face {
+//   font-family: "Playfair Display";
+//   src: url("../f/Playfair_Display/PlayfairDisplay-Black.ttf") format("truetype");
+//   font-weight: normal;
+//   font-style: normal;
+// }
+
 
 $hotelblue: #09B2BD;
 $orange: #FF5C00;
@@ -18,6 +51,7 @@ body {
   font-size: 2rem;
   line-height: 3rem;
   font-family: 'Lato', sans-serif;
+  font-weight: Lato-Regular;
   background-color: $beige;
   color: $grey;
 }
@@ -148,9 +182,15 @@ article {
     .cat {
 
       .intro {
-        color: $hotelblue;
-        h1,h2,h3,h4,h5,h6 {
-          color: $hotelblue;
+        text-align: center;
+        .desc {
+          margin: 0 12rem;
+          color:rgba(78, 78, 78, .5);
+        }
+        h3 {
+          color: $orange;
+          font-size: 4rem;
+          line-height: 4rem;
         }
       }
       h1,h2,h3,h4,h5,h6 {
@@ -193,7 +233,7 @@ article {
         opacity: 0.2;
       }
     }
-     .video {
+    .video {
       grid-column: 7 / 13;
       grid-row: 2 / 4;
 
@@ -202,8 +242,8 @@ article {
         box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.25);
       }
     }
-    }
   }
+}
 
 
 #second-level {
@@ -271,7 +311,7 @@ article {
     grid-gap: 3rem;
 
     img {
-          }
+    }
   }
 }
 footer {
