--- a/theme/css/main.scss
+++ b/theme/css/main.scss
@@ -38,12 +38,15 @@
 $hotelblue: #09B2BD;
 $hotelblue-darker: #07858D;
 $orange: #FF5C00;
+$orange-lighter: #FF7A2F;
 $beige: #F6F1F1;
 $beige-darker: #EFE6E6;
+$beige50: rgba(246,241,241,0.5);
 $blanc: #fff;
 $noir: #000;
 $anthracite: #333;
 $grey: #5E5E5E;
+$grey50: rgba(51, 51, 51, 0.5);
 $greyblue: #30393D;
 
 // GENERAL
@@ -77,8 +80,9 @@ a { color: $orange; text-decoration: none;}
 a:hover, a:active { color: $orange; text-decoration: underline;}
 
 // images
-img {
-  width: 100%;
+.img-article {
+  object-fit: cover;
+  height: 100%;
 }
 
 // gallery
@@ -88,6 +92,8 @@ button {
   background: $hotelblue!important;
   color: $blanc!important;
   padding: 1rem .5rem;
+  display: block!important;
+  margin: 1rem 0;
 }
 button:hover, button:active {
   background: $hotelblue-darker !important;
@@ -97,23 +103,189 @@ button:hover, button:active {
 
 // RESPONSIVE GRID
 // mobile and small screens
-@media only screen and (max-width: 768px) {
-
+@media only screen and (max-width: 767px) {
+  button {
+    float: right;
+  }
+  .container {
+    margin: 0 2rem;
+  }
+  header {
+    height: 33rem;
+  }
+  #alaune {
+    padding-top: 3rem;
+    .date {
+      margin: 1rem 0;
+    }
+    h1 {
+      font-size: 5rem;
+      line-height: 6rem;
+    }
+  }
+  #travel {
+    margin-top: 8rem;
+    padding-top: 6rem;
+    h1 {
+      margin-bottom: 2rem;
+    }
+    .map { img {display: none;} }
+  }
 }
 
 // landscape tablets, laptops and medium desktops
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) and (max-width: 1439px) {
+  .container {
+    margin: 0 auto;
+    padding: 0 2rem;
+  }
+  #alaune {
+    padding-top: 5rem;
+    .big {
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
+      grid-column-gap: 3rem;
+      .date {
+        grid-column: 8 / 13;
+        grid-row: 1 / 2;
+      }
+      .chapo {
+        grid-column: 8 / 13;
+      }
+      h1 {
+        grid-column: 7 / 13;
+        grid-row: 2 / 3;
+        font-size: 6rem;
+        line-height: 7rem;
+      }
+      .image {
+        grid-column: 1 / 8;
+        grid-row: 1 / 5;
+        // height: 53rem;
+      }
+    }
 
+  }
+  #travel {
+    margin-top: -7rem;
+    padding-top: 12rem;
+    .container {
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
+      grid-column-gap: 3rem;
+
+      h2 {
+        grid-column: 1 / 7;
+        font-size: 7rem; line-height: 8rem;
+      }
+      .desc {
+        grid-column: 1 / 5;
+      }
+      .map {
+        grid-column: 1 / 7;
+        display: grid;
+        img {
+          grid-column: 1 / 6;
+          grid-row: 1 / 5;
+          margin-left: -6rem;
+          opacity: 0.2;
+        }
+        button {
+          z-index: 1000;
+          grid-column: 2 / 4;
+          grid-row: 2 / 3;
+          align-self: center;
+        }
+      }
+      .video {
+        grid-column: 7 / 13;
+        grid-row: 2 / 4;
+
+        img {
+          box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.25);
+        }
+      }
+    }
+  }
 }
 
 // large desktops
 @media only screen and (min-width: 1440px) {
-  // .wrapper { width: 1440px; margin: 0 auto;}
+  .container {
+    margin: 0 auto;
+  }
+  #alaune {
+    padding-top: 5rem;
+    .big {
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
+      grid-column-gap: 3rem;
+      .date {
+        grid-column: 8 / 13;
+        grid-row: 1 / 2;
+      }
+      .chapo {
+        grid-column: 8 / 13;
+      }
+      h1 {
+        grid-column: 7 / 13;
+        grid-row: 2 / 3;
+        font-size: 6rem;
+        line-height: 7rem;
+      }
+      .image {
+        grid-column: 1 / 8;
+        grid-row: 1 / 5;
+        // height: 53rem;
+      }
+    }
+  }
+  #travel {
+    margin-top: -7rem;
+    padding-top: 12rem;
+    .container {
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
+      grid-column-gap: 3rem;
+
+      h2 {
+        grid-column: 1 / 7;
+        font-size: 7rem; line-height: 8rem;
+      }
+      .desc {
+        grid-column: 1 / 5;
+      }
+      .map {
+        grid-column: 1 / 7;
+        display: grid;
+        img {
+          grid-column: 1 / 6;
+          grid-row: 1 / 5;
+          margin-left: -12rem;
+          opacity: 0.2;
+        }
+        button {
+          z-index: 1000;
+          grid-row: 1 / 4;
+          grid-column: 2 / 4;
+          grid-row: 2 / 3;
+          align-self: center;
+        }
+      }
+      .video {
+        grid-column: 7 / 13;
+        grid-row: 2 / 4;
+
+        img {
+          box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.25);
+        }
+      }
+    }
+  }
 }
 
 .container {
   max-width: 141rem;
-  margin: 0 auto;
 }
 
 
@@ -165,50 +337,39 @@ nav {
     li:hover { color: $orange; border-bottom: solid 3px $orange;}
   }
   .secondaryNav {
-    color: rgba(51, 51, 51, 0.5);
+    color: $grey50;
     float: right;
     .selected { border-bottom: solid 3px $anthracite; }
     li:hover { color: $anthracite; border-bottom: solid 3px $anthracite;}
   }
 }
 
-
-article {
-  // border: 3px solid crimson;
-}
-
 #alaune {
-  padding-top: 5rem;
   z-index: 50;
   position: relative;
+  .date {color: $grey50;}
+  h1 {color: $anthracite;}
 
-  .big {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-column-gap: 3rem;
-    .date {
-      grid-column: 8 / 13;
-      grid-row: 1 / 2;
-    }
-    .chapo {
-      grid-column: 8 / 13;
-    }
-    h1 {
-      grid-column: 7 / 13;
-      grid-row: 2 / 3;
-      color: $anthracite;
-    }
-    button {
-      grid-column: 8 / 10;
-    }
-    img {
-      grid-column: 1 / 8;
-      grid-row: 1 / 5;
-    }
+}
 
+#travel {
+  background: $greyblue;
+  color: $beige;
+  clip-path: polygon(
+    0 0,
+    100% 6vw,
+    100% 100%,
+    0 100%
+  );
+
+  h1 { color: $orange-lighter;}
+  .desc { color: $beige;}
+  .video {
+    img { border-radius: 0.5rem; }
   }
-
-
+  button {
+    background-color: $orange!important;
+  }
 }
 
 #categories {
@@ -242,55 +403,6 @@ article {
 
 
 }
-
-#travel {
-  background: $greyblue;
-  color: $beige;
-  // height: 78rem;
-  clip-path: polygon(
-    0 0,
-    100% 6vw,
-    100% 100%,
-    0 100%
-  );
-  margin-top: -7rem;
-  padding-top: 12rem;
-
-  h2 { color: $orange; font-size: 7rem; line-height: 8rem;}
-  .container {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-column-gap: 3rem;
-
-    h2 {
-      grid-column: 1 / 7;
-    }
-    .desc {
-      grid-column: 1 / 5;
-
-      color: $beige;
-      opacity: 0.5;
-    }
-    .map {
-      grid-column: 1 / 7;
-
-      img {
-        margin-left: -12rem;
-        opacity: 0.2;
-      }
-    }
-    .video {
-      grid-column: 7 / 13;
-      grid-row: 2 / 4;
-
-      img {
-        border-radius: 0.5rem;
-        box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.25);
-      }
-    }
-  }
-}
-
 
 #second-level {
 
